sanger/ingress/contour-ws.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jupyter
  namespace: jpt
spec:
  virtualhost:
    fqdn: jupyter.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jupyter-backend
  namespace: jpt
spec:
  virtualhost:
    fqdn: jupyter-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jupyter-large
  namespace: jptl
spec:
  virtualhost:
    fqdn: jupyter-large.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jupyter-large-backend
  namespace: jptl
spec:
  virtualhost:
    fqdn: jupyter-large-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jupyter-xl
  namespace: jptx
spec:
  virtualhost:
    fqdn: jupyter-xl.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jupyter-xl-proxy
  namespace: jptx
spec:
  virtualhost:
    fqdn: jupyter-xl-proxy.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jupyter-xl-backend
  namespace: jptx
spec:
  virtualhost:
    fqdn: jupyter-xl-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: galaxy
spec:
  virtualhost:
    fqdn: galaxy.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: galaxy-galaxy-stable
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: galaxy-proxy
spec:
  virtualhost:
    fqdn: galaxy-proxy.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: galaxy-galaxy-stable
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: galaxy-backend
spec:
  virtualhost:
    fqdn: galaxy-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: galaxy-galaxy-stable
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jupyter-large-new
  namespace: jptl
spec:
  virtualhost:
    fqdn: jupyter-large-new.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jupyter-large-new-backend
  namespace: jptl
spec:
  virtualhost:
    fqdn: jupyter-large-new-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jup-test
  namespace: jptt
spec:
  virtualhost:
    fqdn: jupyter-test.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jup-test-backend
  namespace: jptt
spec:
  virtualhost:
    fqdn: jupyter-test-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: isee
spec:
  virtualhost:
    fqdn: isee.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: isee
          port: 3838
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: isee-backend
spec:
  virtualhost:
    fqdn: isee-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: isee
          port: 3838
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: metabase
spec:
  virtualhost:
    fqdn: metabase.cellgeni.sanger.ac.uk
    annotations:
      contour.heptio.com/request-timeout: infinity
    tls: 
      secretName: cert-secret
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: metabase
          port: 3000
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: metabase-backend
spec:
  virtualhost:
    fqdn: metabase-backend.cellgeni.sanger.ac.uk
    annotations:
      contour.heptio.com/request-timeout: infinity
    tls: 
      secretName: cert-secret
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: metabase
          port: 3000
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: transcriptomics
spec:
  virtualhost:
    fqdn: spatial-transcriptomics-research.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: transcriptomics
          port: 8080
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: transcriptomics-backend
spec:
  virtualhost:
    fqdn: spatial-transcriptomics-research-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: transcriptomics
          port: 8080
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: asthma-backend
  annotations:
    contour.heptio.com/ingress.class: contour
    contour.heptio.com/request-timeout: 1000s
spec:
  virtualhost:
    fqdn: asthma-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: asthma
          port: 9001
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: asthma
  annotations:
    contour.heptio.com/ingress.class: contour
    contour.heptio.com/request-timeout: 1000s
spec:
  virtualhost:
    fqdn: asthma.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: asthma
          port: 9001
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: scfind-backend
spec:
  virtualhost:
    fqdn: scfind-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: scfind
          port: 9000
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: scfind
spec:
  virtualhost:
    fqdn: scfind.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: scfind
          port: 9000
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: scmap-backend
spec:
  virtualhost:
    fqdn: scmap-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: scmap
          port: 9000
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: scmap
spec:
  virtualhost:
    fqdn: scmap.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: scmap
          port: 9000
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  virtualhost:
    fqdn: prometheus.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: prometheus-server
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  virtualhost:
    fqdn: grafana.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: grafana
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: grafana-backend
  namespace: monitoring
spec:
  virtualhost:
    fqdn: grafana-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: grafana
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: grafana-proxy
  namespace: monitoring
spec:
  virtualhost:
    fqdn: grafana-proxy.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: grafana
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: nf-server
spec:
  virtualhost:
    fqdn: nf-server.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: nf-server
          port: 9005
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: nf-web
spec:
  virtualhost:
    fqdn: pipelines.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: nf-web
          port: 8000
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: kidneycellatlas
spec:
  virtualhost:
    fqdn: www.kidneycellatlas.org
  routes:
    - match: /
      services:
        - name: index-page
          port: 80
    - match: /static
      services:
        - name: mature-kidney-immune
          port: 80
    - match: /mature-kidney-immune
      prefixRewrite: "/" 
      services:
        - name: mature-kidney-immune
          port: 80
    - match: /mature-kidney-global
      prefixRewrite: "/" 
      services:
        - name: mature-kidney-global
          port: 80
    - match: /mature-non-pt-parenchyma
      prefixRewrite: "/" 
      services:
        - name: mature-non-pt-parenchyma
          port: 80
    - match: /fetal-kidney-stroma
      prefixRewrite: "/" 
      services:
        - name: fetal-kidney-stroma
          port: 80
    - match: /fetal-kidney-global
      prefixRewrite: "/" 
      services:
        - name: fetal-kidney-global
          port: 80
    - match: /fetal-kidney-developing-nephron
      prefixRewrite: "/" 
      services:
        - name: fetal-kidney-developing-nephron
          port: 80
    - match: /fetal-kidney-immune
      prefixRewrite: "/" 
      services:
        - name: fetal-kidney-immune
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: hemocytes
spec:
  virtualhost:
    fqdn: hemocytes.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: hemocytes
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: melanoma
spec:
  virtualhost:
    fqdn: melanoma.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: melanoma
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: tissuestability
spec:
  virtualhost:
    fqdn: www.tissuestabilitycellatlas.org
  routes:
    - match: /oesophagus
      prefixRewrite: "/" 
      services:
        - name: tissue-stability-oesophagus
          port: 80
    - match: /lung
      prefixRewrite: "/" 
      services:
        - name: tissue-stability-lung
          port: 80
    - match: /spleen
      prefixRewrite: "/" 
      services:
        - name: tissue-stability-spleen
          port: 80
    - match: /static
      services:
        - name: tissue-stability-spleen
          port: 80
    - match: /
      services:
        - name: tissue-stability-cell-atlas
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: tissuestability-backend
spec:
  virtualhost:
    fqdn: tissuestability-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: tissue-stability-cell-atlas
          port: 80
    - match: /oesophagus
      prefixRewrite: "/" 
      services:
        - name: tissue-stability-oesophagus
          port: 80
    - match: /lung
      prefixRewrite: "/" 
      services:
        - name: tissue-stability-lung
          port: 80
    - match: /spleen
      prefixRewrite: "/" 
      services:
        - name: tissue-stability-spleen
          port: 80
    - match: /static
      services:
        - name: tissue-stability-spleen
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: tissuestability-cellgeni
spec:
  virtualhost:
    fqdn: tissuestability.cellgeni.sanger.ac.uk
  routes:
    - match: /oesophagus
      prefixRewrite: "/" 
      services:
        - name: tissue-stability-oesophagus
          port: 80
    - match: /lung
      prefixRewrite: "/" 
      services:
        - name: tissue-stability-lung
          port: 80
    - match: /spleen
      prefixRewrite: "/" 
      services:
        - name: tissue-stability-spleen
          port: 80
    - match: /static
      services:
        - name: tissue-stability-spleen
          port: 80
    - match: /
      services:
        - name: tissue-stability-cell-atlas
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jupyter-wsss
  namespace: wsss
spec:
  virtualhost:
    fqdn: wsss.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: jupyter-wsss-backend
  namespace: wsss
spec:
  virtualhost:
    fqdn: wsss-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: proxy-public
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: biliarytree
spec:
  virtualhost:
    fqdn: biliarytree.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: biliarytree
          port: 80
    - match: /biliarytree-human-primary
      prefixRewrite: "/" 
      services:
        - name: biliarytree-human-primary
          port: 80
    - match: /static
      services:
        - name: biliarytree-human-primary
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: biliarytree-backend
spec:
  virtualhost:
    fqdn: biliarytree-backend.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: biliarytree
          port: 80
    - match: /biliarytree-human-primary
      prefixRewrite: "/" 
      services:
        - name: biliarytree-human-primary
          port: 80
    - match: /static
      services:
        - name: biliarytree-human-primary
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: developmentcellatlas
spec:
  virtualhost:
    fqdn: developmentcellatlas.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: developmentcellatlas
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: cvid-activation
spec:
  virtualhost:
    fqdn: cvid-activation.cellgeni.sanger.ac.uk
  routes:
    - match: /
      enableWebsockets: true
      services:
        - name: cvid-activation
          port: 80
