sanger/ingress/ingress-default.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cellgeni
  annotations:
    contour.heptio.com/request-timeout: "2000s"
    kubernetes.io/ingress.class: contour
spec:
  rules:
  - host: partslab.sanger.ac.uk
    http: &partslab
      paths:
      - path: /JACKS
        backend:
          serviceName: jacks
          servicePort: 8005
      - path: /
        backend:
          serviceName: forecast
          servicePort: 8005
  - host: partslab.cellgeni.sanger.ac.uk
    http: *partslab
