sanger/ingress/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: asthma-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: asthma.cellgeni.sanger.ac.uk
    http: &asthma
      paths:
      - path: /
        backend:
          serviceName: asthma
          servicePort: 9001
  - host: asthma-backend-nginx.cellgeni.sanger.ac.uk
    http: *asthma
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyter-nginx
  namespace: jpt
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 33000m
spec:
  rules:
  - host: jupyter.cellgeni.sanger.ac.uk
    http: &jupyter
      paths:
      - path: /
        backend:
          serviceName: proxy-public
          servicePort: 80
  - host: jupyter-backend-nginx.cellgeni.sanger.ac.uk
    http: *jupyter
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jupyter-large-nginx
  namespace: jptl
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 100000m
spec:
  rules:
  - host: jupyter-large.cellgeni.sanger.ac.uk
    http: &jupyter-large
      paths:
      - path: /
        backend:
          serviceName: proxy-public
          servicePort: 80
  - host: jupyter-large-backend-nginx.cellgeni.sanger.ac.uk
    http: *jupyter-large
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: cellgeni-nginx
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     nginx.ingress.kubernetes.io/add-base-url: "true"
#     nginx.ingress.kubernetes.io/base-url-scheme: "https"
#     nginx.ingress.kubernetes.io/proxy-read-timeout: "86000"
#     nginx.ingress.kubernetes.io/proxy-connect-timeout: "86000"
#     nginx.ingress.kubernetes.io/proxy-send-timeout: "86000"
# spec:
#   rules:
#   - host: isee.cellgeni.sanger.ac.uk
#     http: &isee
#       paths:
#       - path: /teichlab/ss2-human
#         backend:
#           serviceName: ss2-human
#           servicePort: 80
#       - path: /teichlab/tenx-skin
#         backend:
#           serviceName: tenx-skin
#           servicePort: 80
#       - path: /teichlab/ss2-mousecolon
#         backend:
#           serviceName: ss2-mousecolon
#           servicePort: 80
#       - path: /teichlab/ss2-mousemelanoma
#         backend:
#           serviceName: ss2-mousemelanoma
#           servicePort: 80
#       - path: /teichlab/ss2-mouseskin
#         backend:
#           serviceName: ss2-mouseskin
#           servicePort: 80
#       - path: /teichlab/tenx-tmembln
#         backend:
#           serviceName: tenx-tmembln
#           servicePort: 80
#       - path: /teichlab/tenx-tmemcolon
#         backend:
#           serviceName: tenx-tmemcolon
#           servicePort: 80
#       - path: /teichlab/tenx-tmemmln
#         backend:
#           serviceName: tenx-tmemmln
#           servicePort: 80
#       - path: /teichlab/tenx-tmemspleen
#         backend:
#           serviceName: tenx-tmemspleen
#           servicePort: 80
#       - path: /teichlab/tenx-tregbln
#         backend:
#           serviceName: tenx-tregbln
#           servicePort: 80
#       - path: /teichlab/tenx-tregcolon
#         backend:
#           serviceName: tenx-tregcolon
#           servicePort: 80
#       - path: /teichlab/tenx-tregmln
#         backend:
#           serviceName: tenx-tregmln
#           servicePort: 80
#       - path: /teichlab/tenx-tregspleen
#         backend:
#           serviceName: tenx-tregspleen
#           servicePort: 80
  
#   - host: isee-backend.cellgeni.sanger.ac.uk
#     http: *isee
